2018-07-27  Charlie Zender  <zender@aerosol>

	* Support --wgt_cmd in ncremap MWF mode, e.g., 'mpirun -np 12 ESMF_RegridWeightGen'

	* NCO 4.7.6-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.6-alpha05: Roux';git push
	git tag -a 4.7.6-alpha05 -m 'aux w/o std_nm; docs; Tempest in MWF';git push --tags

	* Henry added -X support for auxiliary coordinates without standard_name attributes

2018-07-23  Charlie Zender  <zender@uci.edu>

	* Add 'Parallelism Mode = ${par_sng}' to output

2018-07-18  Charlie Zender  <zender@aerosol>

	* Implement E3SM v2 Tempest algorithm strings in ncremap MWF mode

2018-07-16  Charlie Zender  <zender@uci.edu>

	* Rename NC_HAVE_RENAME_GRP to HAVE_NC_RENAME_GRP

	* Obtain NC_HAVE_RENAME_GRP from CMake and autoconf macros rather than netcdf.h

2018-07-15  Charlie Zender  <zender@uci.edu>

	* Document nm_src, nm_dst, dt_sng

	* Add Tempest v2 maps to ncremap MWF mode

	* Add ending comma to JSON types block

2018-07-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.6-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.6-alpha04: Blue';git push
	git tag -a 4.7.6-alpha04 -m 'ncremap -P mwf;RRG prs dat_rgn';git push --tags

	* Initial implementation of MWF mode

	* Add optional/required inputs for MWF mode: nm_src, nm_dst, dt_sng

	* Add ncremap alg_typ synonyms patc, ndtos, nstod, blin to support MPAS make_weight_files (mwf) workflow

2018-07-08  Charlie Zender  <zender@uci.edu>

	* ncremap RRG examine dat_rgn to create rnm_sng

	* ncremap RRG parse rnm_sng to create bb_wesn string

	* Add mlt_rcd.cdl to test multiple record coordinate concatentation

	* Change if thr_nbr > 0 to if thr_nbr > 1 for nco_thr_att_cat()

2018-07-06  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.6-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.6-alpha03: Repaint';git push
	git tag -a 4.7.6-alpha03 -m 'ncremap RRG works;xmllint compliance;ncap2 pack() fix';git push --tags
